<resources>
    <string name="app_name">NASA2</string>

    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Find in Wikipedia</string>
    <string name="wiki_helper_text">Search for the term in Wikipedia</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>

    <string name="today">today</string>
    <string name="yesterday">yesterday</string>
    <string name="day_before_yesterday">day before yesterday</string>
    <string name="choice">Choice</string>
    <string name="light">light</string>
    <string name="dark">dark</string>
    <string name="tropic">tropic</string>
    <string name="choice_a_theme">choice a theme</string>
    <string name="pull_me_down">Pull me down!</string>
    <string name="apod_video">video</string>
    <string name="bye_earthlings">Bye Earthlings!</string>
    <string name="motion">motion</string>
    <string name="notes">notes</string>
    <string name="dog">Dog</string>
    <string name="cat">Cat</string>
    <string name="cats_are_a_mammal_of_the_feline_family_of_the_order_of_carnivores">Cats are a mammal of the feline family of the order of carnivores</string>
    <string name="dogs_placental_mammal_of_the_order_of_carnivores_of_the_canid_family">Dogs — placental mammal of the order of carnivores of the canid family.</string>
    <string name="added_a_note">added a note</string>
    <string name="title_activity_splash" translatable="false">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="nasa" translatable="false">NASA</string>

</resources>